# slack-emoji-pipeline

./: .env.example  .gitignore  1_sanitise.py  LICENSE  README.md  SOCIAL_PROMOTION.md  pyproject.toml  renamer.py  requirements.txt  sanitizer.py  uploader.py
src/: renamer.py  sanitizer.py  uploader.py
src/slack_emoji_pipeline/: sanitizer.py  uploader.py
tests/: test_renamer.py  test_sanitiser.py  test_sanitizer.py  test_uploader.py
